@@ -29,7 +29,7 @@
  * |   provided "as is" without express or implied warranty.		|
  * +-------------------------------------------------------------------+
  *
- * RCS: @(#) $Id: tkImgGIF.c,v 1.25 2003/03/06 15:05:31 dkf Exp $
+ * RCS: @(#) $Id: tkImgGIF.c,v 1.26 2004/07/27 21:19:32 das Exp $
  */
 
 /*
@@ -327,11 +327,12 @@ FileReadGIF(interp, chan, fileName, format, imageHandle, destX, destY,
     while (1) {
 	if (Fread(buf, 1, 1, chan) != 1) {
 	    /*
-	     * Premature end of image.  We should really notify
-	     * the user, but for now just show garbage.
+	     * Premature end of image.
 	     */
 
-	    break;
+	    Tcl_AppendResult(interp,"premature end of image data for this index",
+                             (char *) NULL);
+	    goto error;
 	}
 
 	if (buf[0] == GIF_TERMINATOR) {
